css/style.css
/* ... */
/****************************************************/
/* FOOTER  */
/****************************************************/

footer {
    padding: 12.8rem 0;
    border-top: 1px solid #eee;
}

.grid-footer {
    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
}

.logo-col {
    display: flex;
    flex-direction: column;
}

.footer-heading {
    font-size: 1.8rem;
    font-weight: 500;
    margin-bottom: 3.2rem;
}

.footer-logo {
    display: block;
    margin-bottom: 2.4rem;
}

.social-links {
    list-style: none;
    display: flex;
    column-gap: 2.4rem;
}

.social-icon {
    height: 2.4rem;
    width: 2.4rem;
}
.footer-link-icon:link,
.footer-link-icon:visited {
    text-decoration: none;
    font-size: 1.6rem;
    color: #fff;
    transition: all 0.2s;
}

.logo-instagram {
    background-image: linear-gradient(to right top, #f7d501, #cf235a, #7a37aa);
    padding: 0;
    border-radius: 0.5rem;
}

.logo-facebook {
    color: #4c6ef5;
}

.logo-twitter {
    color: #4dabf7;
}

.copyright {
    font-size: 1.4rem;
    color: #767676;
    line-height: 1.6;
    margin-top: auto;
}

.contacts {
    display: flex;
    flex-direction: column;
    gap: 1.6rem;
}

.contacts div {
    display: flex;
    align-items: center;
    gap: 1.6rem;
}

.contacts div a,
.contacts div p {
    text-decoration: none;
    color: #767676;
    font-size: 1.6rem;
}

.telephone-link:hover,
.telephone-link:active {
    color: #37b24d;
}

.email-link:hover,
.email-link:active {
    color: #4dabf7;
}

.contact-icon {
    height: 2rem;
    width: 2rem;
}

.location-icon {
    color: #f03e3e;
}
.telephone-icon {
    color: #37b24d;
}
.email-icon {
    color: #4dabf7;
}

.footer-nav {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 1.6rem;
}

.footer-link:link,
.footer-link:visited {
    text-decoration: none;
    font-size: 1.6rem;
    color: #767676;
    transition: all 0.2s;
}

.footer-link:hover,
.footer-link:active {
    color: #555;
}

